# signaldeck-plugin-hello-world

./: .gitignore  README.md  pyproject.toml
signaldeck_plugin_hello_world/: plugin.py
signaldeck_plugin_hello_world/processors/: hello_world.py  hello_world_displaydata.py  hello_world_with_data.py
signaldeck_plugin_hello_world/static/css/: hello_world.css
signaldeck_plugin_hello_world/static/js/: hello_world.js
signaldeck_plugin_hello_world/templates/hello_world/: hello_world.html  hello_world_data.html
